# bitwarden-mxroute

./: .env.example  .gitignore  Procfile  README.md  app.py  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  flake.nix  process-compose.yaml
.github/workflows/: docker-publish.yml  publish.yml  pull-request.yml
server/: .gitignore  Dockerfile  Dockerfile.dev  app.py  pyproject.toml  requirements.txt  test_app.py
server/providers/: mxroute.py  provider.py  purelymail.py
web/: Dockerfile  Dockerfile.dev  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: ForwarderItem.tsx  OptionsPopup.tsx
web/src/stores/: appStore.test.ts  appStore.ts
web/src/utils/: constants.ts  mxroute.ts
