[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitwarden-mxroute-server"
version = "0.1.0"
description = "Bitwarden MXRoute Alias Generator Plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coolname>=4.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
